#!schema: https://json.schemastore.org/pyproject.json
[project]
name = "asyncio-gevent"
version = "0.2.3"
description = "asyncio & gevent in harmony"
authors = [{ name = "Frédérique Mittelstaedt", email = "hi@gfm.io" }]
license = { file = "./LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = "<4.0,>=3.7"
dependencies = [
  "gevent; python_version < \"3.10\" and python_version >= \"3.7\"",
  "gevent<22.0.0,>=21.12.0; python_version >= \"3.10\" and python_version < \"3.11\"",
  "gevent<23.0.0,>=22.10.2; python_version ~= \"3.11\"",
]

[project.urls]
homepage = "https://github.com/gfmio/asyncio-gevent"
repository = "https://github.com/gfmio/asyncio-gevent"
documentation = "https://github.com/gfmio/asyncio-gevent"

# keywords = ["asyncio", "gevent"]
# include = ["NOTICE"]

[tool.uv]
dev-dependencies = [
  "mypy>=1.4.1",
  "pyright>=1.1.394",
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
  "pytest-watcher>=0.4.3",
  "ruff>=0.9.7",
]

[tool.pdm.build]
includes = ["NOTICE"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
ignore = ["**/build/**", "**/dist/**", "**/.venv/**"]
# [tool.poetry.dependencies]
# python = "^3.7"
# gevent = [
#   { version = "*", python = ">=3.7, <3.10" },
#   { version = "^21.12.0", python = ">=3.10, <3.11" },
#   { version = "^22.10.2", python = "^3.11" },
# ]

# [tool.poetry.dev-dependencies]
# mypy = "^0.991"
# pytest = "^7.2.0"
# pytest-cov = "^4.0.0"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true
publish-url = "https://test.pypi.org/legacy"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
